# warpcore

./: .clang-format  .dockerignore  .editorconfig  .gitignore  .gitmodules  .lgtm.yml  .sublimelinterrc  .travis.yml  CMakeInit.txt  CMakeLists.txt  Dockerfile  GNUmakefile  LICENSE.md  README.md  Vagrantfile  analyze.r  arp.c  arp.h  benchmark.sh  darwin.imp  debug.c  debug.h  eth.c  eth.h  freebsd.imp  icmp.c  icmp.h  in_cksum.c  ip.c  ip.h  linux.imp  plat.h  plat_freebsd.c  plat_linux.c  tcp.c  tcp.h  test.c  udp.c  udp.h  udpping.c  (+8 more)
.github/: in-solidarity.yml
.github/codeql/: codeql-config.yml
.github/isb-ietf-config/: README.md
.github/isb-ietf-config/.github/: in-solidarity.yml
.github/workflows/: build.yml  codeql-analysis.yml
doc/: CMakeLists.txt  Doxyfile.in
examples/: .gitignore  CMakeLists.txt  plat.h  plat_freebsd.c  plat_generic.c  plat_linux.c  warpinetd.c  warpping.c
lib/: .gitignore  CMakeLists.txt  arp.c  arp.h  backend.h  backend_netmap.c  backend_shim.c  config.c.in  debug.c  debug.h  eth.c  eth.h  icmp.c  icmp.h  in_cksum.c  ip.c  ip.h  plat.c  plat.h  plat_freebsd.c  plat_generic.c  plat_linux.c  shim.c  udp.c  udp.h  util.c  util.h  version.c.in  version.h.in  warpcore.c  warpcore.h  warpcore_internal.h
lib/freebsd/: plat.c
lib/generic/: plat.c
lib/include/warpcore/: config.h.in  khash.h  plat.h  queue.h  tree.h  util.h  warpcore.h
lib/linux/: plat.c
lib/src/: arp.c  arp.h  backend.h  backend_dpdk.c  backend_netmap.c  backend_particle.c  backend_riot.c  backend_shim.c  backend_sock.c  config.c.in  eth.c  eth.h  eth_tx.h  icmp.c  icmp.h  icmp4.c  icmp4.h  icmp6.c  icmp6.h  ifaddr.c  ifaddr.h  in_cksum.c  in_cksum.h  ip.c  ip.h  ip4.c  ip4.h  ip6.c  ip6.h  krng.h  neighbor.c  neighbor.h  plat.c  udp.c  udp.h  util.c  warpcore.c
misc/: analyze.r  bench.sh  benchmark.sh  darwin.imp  fabfile.py  freebsd.imp  fuzz.trafgen  id_rsa  linux.imp  newplot.r  plot.r  push-to-gh-pages.sh  sanitize-suppress.txt
scripts/: analyze.r  benchmark.sh  distclean.sh  id_rsa.pub
test/: CMakeLists.txt  bench.cc  common.c  common.h  fuzz.c  in_cksum.cc  test_ecn.c  test_hexdump.c  test_iov.c  test_many.c  test_queue.c  test_sock.c
